# il2cpp-zig

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  analyze_typedef_32.py  build.sh
src/: MetadataLoader.cpp  MetadataLoader.h  il2cpp_structs.h  main.cpp
